examples/test/testpolicy1158.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1158
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key23: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value14
          key3: value40
      podSelector:
        matchLabels:
          key6: value23
          key14: value42
          key46: value25
